Stop scrolling behind modals and remove old auth form scss

--- a/src/styles/components/auth/login/login-modal.scss
+++ b/src/styles/components/auth/login/login-modal.scss
@@ -35,3 +35,7 @@
     transform: translateY(0%);
   }
 }
+
+.ReactModal__Body--open {
+    overflow: hidden;
+}
